rgw: fix the Content-Length in response header is inconsistent with response body size when rgw returns default html error page in static website

The default html error page as response body should be built completely include three ending html symbols(/ul, /body and /html) before rgw computes Content-Length in response header. The Content-Length in response header will be consistent with response body size. Client can get complete page.

Fixes: https://tracker.ceph.com/issues/52363
Signed-off-by: xiangrui meng mengxr@chinatelecom.cn
Signed-off-by: aicun hu huaicun@chinatelecom.cn
Signed-off-by: yupeng chen chenyupeng@chinatelecom.cn